--- a/index.html
+++ b/index.html
@@ -19,10 +19,10 @@
       </tr>
       <tr>
         <th>Four Planets</th>
-        <td><img src="./image/jupiter.jpeg" alt="jupiter"></td>
-        <td><img src="./image/earth.jpeg" alt="earth"></td>
-        <td><img src="./image/moon.jpeg" alt="moon"></td>
-        <td><img src="./image/mars.jpeg" alt="mars"></td>
+        <td><img src="./image/jupiter.jpg" alt="jupiter"></td>
+        <td><img src="./image/earth.jpg" alt="earth"></td>
+        <td><img src="./image/moon.jpg" alt="moon"></td>
+        <td><img src="./image/mars.jpg" alt="mars"></td>
       </tr>
       <tr>
         <th>Mass (10<sup>24</sup> kg)</th>
