--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   </head>
   <body>
     <h1>
-        List of Planets and thier details
+        List of Planets and Thier details
     </h1>
     <table>
       <tr>
