--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
         <td><img src="./image/mars.jpg" alt="mars"></td>
       </tr>
       <tr>
-        <th>Mass (10<sup>24</sup> kg)</th>
+        <th>Mass (kg)</th>
         <td>1898</td>
         <td>5.97</td>
         <td>0.073</td>
