--- a/index.html
+++ b/index.html
@@ -19,10 +19,10 @@
       </tr>
       <tr>
         <th>Four Planets</th>
-        <td><img src="./image/jupiter.jpg" alt="jupiter"></td>
-        <td><img src="./image/earth.jpg" alt="earth"></td>
-        <td><img src="./image/Moon.jpg" alt="Marsoon"></td>
-        <td><img src="./image/mars.jpg" alt="mars"></td>
+        <td><img src="jupiter.jpg" alt="jupiter"></td>
+        <td><img src="earth.jpg" alt="earth"></td>
+        <td><img src="Moon.jpg" alt="Marsoon"></td>
+        <td><img src="mars.jpg" alt="mars"></td>
       </tr>
       <tr>
         <th>Mass (kg)</th>
